[package]
name = "netrangemerge"
version = "0.1.0"
authors = ["Palmer Cox <p@lmercox.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
rlua = "0.17.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
libnetrangemerge = { path = "../libnetrangemerge" }
structopt = "0.3.21"
reqwest = { version = "0.11.2", features = ["blocking"] }
